(governance) remove near, ref, perp connectors
